(hopefully) fix fonts, and fix image on mobile

--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,13 @@ h1 {
 #polbot2_title, .polbot2_icons {
     color: #F5C2E7;
 }
+.dotfiles_icons, .polbot2_icons {
+    font-family: 'NerdFontsSymbols Nerd Font';
+}
 
 .info_icons {
-    color: #DDB6F2
+    color: #DDB6F2;
+    font-family: 'NerdFontsSymbols Nerd Font';
 }
 
 @media only screen and (max-width: 1050px) {
